# TweetApp

./: .gitignore  .pre-commit-config.yaml  .prettierignore  db.sqlite3  pyproject.toml  requirements.txt
TweetApp/: settings.py  urls.py
app/: admin.py  urls.py
app/forms/: __init__.py  login_form.py  profileupdate_form.py  signup_form.py  tweet_form.py
app/migrations/: 0001_initial.py  0002_tweet.py  0003_tweet_parent.py
app/models/: __init__.py  tweet.py  user.py
app/static/css/: base.css
app/templates/app/: account.html  base.html  home.html  login.html  profile_setup.html  search.html  signup.html  top.html  tweet_form.html
app/views/: __init__.py  account.py  home.py  login.py  message.py  notice.py  profile_update.py  search.py  setting.py  sign_up.py  top.py  tweet_form.py
static/css/: account.css  base.css  home.css  login.css  setup.css  signup.css  top.css  tweet_form.css
