[dependency-groups]
dev = ["django-stubs", "pre-commit", "ruff"]

[project]
authors = [{ name = "DeMiA inc." }]
dependencies = [
    "django (==4.2.27)",
    "gunicorn",
    "python-dotenv",
    "asgiref (==3.11.0)",
    "pillow (==11.3.0)",
    "ruff (==0.14.8)",
    "sqlparse (==0.5.4)",
    "typing-extensions (==4.15.0)",
]
description = ""
name = "TweetApp"
requires-python = ">=3.12,<4.0"
version = "0.1.0"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
omit = ["*/admin.py", "*/test*.py", "*/tests/*", "manage.py"]

[tool.django-stubs]
django_settings_module = "ShareVids.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
ignore = ["SIM105"]
select = ["A", "B", "DJ", "DTZ", "E", "F", "G", "LOG", "N", "W"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"**/management/commands/*" = ["T20"]
"**/migrations/*" = ["E501"]
"scripts/**" = ["T20"]
"*.html" = ["E501"]